--- a/index.html
+++ b/index.html
@@ -9,5 +9,49 @@
 </head>
 <body>
     
+    <nav>
+        <div class="container flex">
+            <h1>Golf Stats</h1>
+
+            <ul class="flex">
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+                <li>6</li>
+                <li>7</li>
+                <li>8</li>
+                <li>9</li>
+                <li>10</li>
+                <li>11</li>
+                <li>12</li>
+                <li>13</li>
+                <li>14</li>
+                <li>15</li>
+                <li>16</li>
+                <li>17</li>
+                <li>18</li>
+            </ul>
+        </div>
+    </nav>
+
+    <div>
+        <div class="div1">
+            <h3>Hole 1</h3>
+        </div>
+        <div class="div2">
+            <div>
+                <label for="fir">Fairway In Regulation</label>
+                <button name="fir">Yes</button>
+                <button name="fir">No</button>
+            </div>
+            <div>
+                <label for="gir">Green In Regulation</label>
+                <button name="gir">Yes</button>
+                <button name="gir">No</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
