--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                         </div>
                         <p>      
                             <label class="label-style"><b>Driving Distance</b></label>
-                            <input class="input-style" name="drive-distance" type="text" maxlength="3" placeholder="250"></p>
+                            <input class="input-style" name="drive-distance" type="text" maxlength="3" pattern="[0-999]{3}" placeholder="250"></p>
                             <p>      
                         <p>      
                         <label class="label-style"><b>Putts</b></label>
-                        <input class="input-style" name="putts" type="text" maxlength="2"></p>
+                        <input class="input-style" name="putts" type="text" maxlength="2" pattern="[0-99]{2}"></p>
                         <p>      
                         <label class="label-style"><b>Score</b></label>
-                        <input class="input-style" name="score" type="text" maxlength="2"></p>
+                        <input class="input-style" name="score" type="text" maxlength="2" pattern="[0-99]{2}"></p>
                         <p class="btn-box"><button class="submit-btn">Submit</button></p>
                       </form>
                 </div>
